e-greddy part completed
FInalised comments for the epislon-greedy example

--- a/examples/K-armed_bandit_algorithms.ipynb
+++ b/examples/K-armed_bandit_algorithms.ipynb
@@ -326,7 +326,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -457,10 +461,10 @@
     "How do we implement it? Let us first write down some definition \n",
     "1. define $n_{i,t}$ to be the number of times arm $i$ has been played up to time $t$.\n",
     "2. Define $Y_t ∈ [0,1]$ to be the reward we observe at time $t$.\n",
-    "3. Define $I_t ∈ {1...N}$ to be the choice of arm at time $t$. Then the empirical reward estimate of arm i at time $t$ is:\n",
+    "3. Define $I_t ∈ {1...N}$ to be the choice of arm at time $t$. Then the empirical reward estimate of arm $i$ at time $t$ is:\n",
     "\n",
     "\\begin{equation}\n",
-    "\\hat{\\mu}_{i,t} = \\frac{\\sum^t_{ts=1: I_s=i}Y_s}{n_{i,t}}\n",
+    "\\hat{\\mu}_{i,t} = \\frac{\\sum^t_{s=1: I_s=i}Y_s}{n_{i,t}}\n",
     "\\end{equation}\n",
     "\n",
     "Then the $\\epsilon$-greedy policy is\n",
@@ -470,22 +474,33 @@
     "&\\text{$0<\\epsilon<1$, }\\text{number of trials $T$, actions (arms) $a_1,a_2,...,a_n$}\\\\\n",
     "\\end{align}\n",
     "\\begin{align}\n",
-    "\\text{for  }t=1\\text{  to  }T\\\\\n",
-    "&r\\leftarrow \\mathcal{u}(0,1)\\\\\n",
-    "&\\hat{\\mu}_{i,t}\\leftarrow\\text{current average reward for action (arm) $i$  }\n",
+    "\\text{$\\epsilon$-greedy policy}\\\\\n",
+    "\\text{for  }i=1&\\text{  to  }n\\\\\n",
+    "\\hat{\\mu}_{i,0}\\leftarrow&\\text{prior average reward for action $i$  }\\\\\n",
+    "\\text{for  }t=1&\\text{  to  }T\\\\\n",
+    "r\\leftarrow &\\mathcal{u}(0,1)\\\\\n",
+    "\\text{if }r&>\\epsilon\\\\\n",
+    "&\\text{return } I_{t}=argmax_i(\\hat{\\mu}_{i,t})\\\\\n",
+    "\\text{else}&\\\\\n",
+    "&\\text{return } I_{t}=\\text{randomly chosen action }\\\\\n",
+    "\\hat{\\mu}_{i,t}\\leftarrow&\\text{current average reward for action $i$  }\n",
     "\\end{align}\n",
     "\n",
+    "The role of the $\\epsilon$ parameter is to define the **exploration-exploitation** trade off.\n",
+    "Small values of $\\epsilon$ implies our algorithm will mostly exploit the (currently known as) best action, while large values will force it to spend more time exploring other options.\n",
+    "The prior probability values assigned at each arm reward can be\n",
+    "1. flat, i.e.\n",
+    "    \\begin{equation}\n",
+    "    \\mu_{i,0} = \\alpha \\quad \\alpha\\in(0,1)\n",
+    "    \\end{equation}\n",
+    "2. arm specific, i.e.\n",
+    "    \\begin{equation}\n",
+    "    \\mu_{i,0} = \\alpha_i \\quad \\alpha_i\\in(0,1)\n",
+    "    \\end{equation}\n",
+    "    \n",
+    "Using non flat priors could boost the algorithm convergence, provided that their values are close to the real ones. If this is not the case, then one has to tune the value of $\\epsilon$ to ensure we can explore enough to identify the best action on the long term.\n",
     "\n",
-    "If we define a positive exploration ratio $\\epsilon$, the strategy implies selecting the best arm for a proportion $1-\\epsilon$ of the trials, and a random arm (with uniform probability) for a proportion \n",
-    "$\\epsilon$. \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<img src=\"./images/e-greedy-algo.png\" width=\"600\">\n",
-    "\n"
+    "In the following example, we examine the performance of four different $\\epsilon$-greedy strategies, each characterized by a different $\\epsilon$ value. In this example we will use flat priors."
    ]
   },
   {
@@ -522,8 +537,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can now analyze the behavior of this algorithm.\n",
-    "\n",
     "### Has been the best option used most of the times?"
    ]
   },
@@ -569,7 +582,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "COMMENTS COMMENTS COMMENTS"
+    "As we can see, really small values of $\\epsilon$ (0.1) cause the algorithm to almost always choose a sub-optimal action.<br>\n",
+    "On the other hand, too large values of $\\epsilon$ (0.8) force it to spend too much time exploring other options, and not focussing enough on the most rewarding one.<br>\n",
+    "Intermediate values ($\\epsilon=0.3,0.6$) provide a better exploration-vs-exploitation balance, as they allow the algorithm to rapidly identify the best option by doing the right amount of exploration, and then exploit it most of the times."
    ]
   },
   {
@@ -658,7 +673,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "COMMENT COMMENT"
+    "As we can see from the plot, the $\\epsilon=0.3$ strategy seems to be best one, as its cumulative reward over time is the largest."
    ]
   },
   {
@@ -1012,7 +1027,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
